--- a/srcs/WP/Dockerfile
+++ b/srcs/WP/Dockerfile
@@ -3,8 +3,7 @@ WORKDIR /
 
 RUN apt update -y && apt upgrade -y
 RUN apt-get update -y && apt-get upgrade -y
-RUN apt install -y curl
-RUN mkdir ./wp_download_files
+RUN apt install -y curl php php-fpm mariadb-client
 RUN curl -O https://wordpress.org/latest.tar.gz
 RUN	tar -xvf latest.tar.gz
 RUN rm -rf latest.tar.gz
