--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 MYSQL_ROOT_PASSWORD=mysql_root_pass
-MYSQL_DATABASE=db_name
-MYSQL_USER=user_name
-MYSQL_PASSWORD=user_pass
+MYSQL_DATABASE=wordpress_db
+MYSQL_USER=wordpress
+MYSQL_PASSWORD=wordpress
+WORDPRESS_DB_HOST=db:3306
+WORDPRESS_DB_USER=wordpress
+WORDPRESS_DB_PASSWORD=wordpress
+WORDPRESS_DB_NAME=wordpress
