--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ MYSQL_ROOT_PASSWORD=mysql_root_pass
 MYSQL_DATABASE=wordpress_db
 MYSQL_USER=wordpress
 MYSQL_PASSWORD=wordpress
-WORDPRESS_DB_HOST=db:3306
+WORDPRESS_DB_HOST=inception_mdb:3306
 WORDPRESS_DB_USER=wordpress
 WORDPRESS_DB_PASSWORD=wordpress
-WORDPRESS_DB_NAME=wordpress
+WORDPRESS_DB_NAME=wordpress_db
