--- a/srcs/Nginx/config_files/inception_nginx.conf
+++ b/srcs/Nginx/config_files/inception_nginx.conf
@@ -4,8 +4,17 @@ server {
 	server_name vducoulo.42.fr;
 	ssl_certificate /etc/ssl/certs/public.crt;
 	ssl_certificate_key /etc/ssl/private/private.key;
-	ssl_protocols TLSv1.3;
+	ssl_protocols TLSv1.2 TLSv1.3;
 
 	root /var/www/html/;
 	index index.php;
+	location / {
+    try_files $uri $uri/ /index.php$is_args$args;
+	}
+	location ~ \.php$ {
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+           	fastcgi_pass inception_wp:9000;
+            fastcgi_index index.php;
+            include fastcgi.conf;
+  }
 }
