--- a/srcs/WP/Dockerfile
+++ b/srcs/WP/Dockerfile
@@ -12,9 +12,7 @@ ENV WORDPRESS_DB_USER $WPDB_USERNAME
 RUN apt update -y && apt upgrade -y
 RUN apt-get update -y && apt-get upgrade -y
 RUN apt install -y curl php php-fpm mariadb-client less php-mysql
-RUN mkdir /var/www && mkdir /config && mkdir /config/wordpress
-#RUN curl -O https://wordpress.org/latest.tar.gz
-#RUN tar -xvf latest.tar.gz -C /var/www
+RUN mkdir -p /var/www /config /config/wordpress /run/php /var/run
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 RUN chmod +x wp-cli.phar
 RUN mv wp-cli.phar /usr/local/bin/wp
@@ -22,6 +20,5 @@ RUN wp cli update
 RUN wp core download --allow-root --path=/var/www/html
 COPY ./config_files/inception_wp.sh /config/inception_wp.sh
 RUN chmod +x /config/inception_wp.sh
-#RUN wp config create --allow-root --dbhost=$WORDPRESS_DB_HOST --dbname=$WORDPRESS_DB_NAME --dbuser=$WORDPRESS_DB_USER --dbpass=$WORDPRESS_DB_PASSWORD --path=/var/www/html/
-#RUN wp core install --url=vducoulo.42.fr --title=Example --admin_user=supervisor --admin_password=strongpassword --admin_email=info@example.com
+RUN echo "listen = 9000" >> /etc/php/7.3/fpm/pool.d/www.conf
 ENTRYPOINT ["sh", "/config/inception_wp.sh"]
