--- a/srcs/MariaDB/Dockerfile
+++ b/srcs/MariaDB/Dockerfile
@@ -3,15 +3,14 @@ ARG WPDB_NAME
 ARG WPDB_USERNAME
 ARG WPDB_PASS
 ARG WPDB_HOST
-ENV WORDPRESS_DB_NAME $WPDB_NAME
-ENV WORDPRESS_DB_HOST $WPDB_HOST
-ENV WORDPRESS_DB_PASSWORD $WPDB_PASS
-ENV WORDPRESS_DB_USER $WPDB_USERNAME
+ENV MYSQL_DATABASE $WPDB_NAME
+ENV MYSQL_PASSWORD $WPDB_PASS
+ENV MYSQL_USER $WPDB_USERNAME
 WORKDIR /
 
 RUN apt-get update -y && apt-get upgrade -y
 RUN apt-get install -y mariadb-server dumb-init
-RUN service mysql start && mysql -u root -e "CREATE DATABASE ${WORDPRESS_DB_NAME} ; GRANT ALL ON $WORDPRESS_DB_NAME.* TO '$WORDPRESS_DB_USER'@'%' IDENTIFIED BY '$WORDPRESS_DB_PASSWORD' WITH GRANT OPTION ; FLUSH PRIVILEGES ;"
+RUN service mysql start && mysql -u root -e "CREATE DATABASE ${MYSQL_DATABASE} ; GRANT ALL ON $MYSQL_DATABASE.* TO '$MYSQL_USER'@'%' IDENTIFIED BY '$MYSQL_PASSWORD' WITH GRANT OPTION ; FLUSH PRIVILEGES ;"
 RUN service mysql stop
 COPY ./config_files/my.cnf /etc/mysql/my.cnf
 RUN service mysql start
