--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,13 @@
+# mysql db
+
 MYSQL_ROOT_PASSWORD=mysql_root_pass
 MYSQL_DATABASE=wordpress_db
 MYSQL_USER=wordpress
 MYSQL_PASSWORD=wordpress
 WORDPRESS_DB_HOST=inception_mdb:3306
+
+# WP ACCOUNTS DEFAULTS
+
 WORDPRESS_ADMIN_NAME=god
 WORDPRESS_ADMIN_PASS=Ohmyg0d42
 WORDPRESS_FIRSTUSER_NAME=notagod
