--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     image: inception_nginx_img
     volumes:
       - inception_wp_content_vol:/var/www/html/
+    networks:
+      - inception_network
     container_name : inception_nginx
     ports:
       - "443:443"
@@ -24,6 +26,8 @@ services:
     image: inception_wp_img
     volumes:
       - inception_wp_content_vol:/var/www/html/
+    networks:
+      - inception_network
     container_name: inception_wp
     env_file: .env
 
@@ -37,14 +41,29 @@ services:
     image: inception_mdb_img
     volumes: 
       - inception_mdb_db:/var/lib/mysql
+    networks:
+      - inception_network
     container_name: inception_mdb
     restart: unless-stopped
 
 
 volumes:
   inception_wp_content_vol:
+    driver: local
+    name: inception_wp_content_vol
+    driver_opts:
+      type: none
+      o: bind
+      device: /Users/victorducoulombier/Documents/dev/42/inception_volumes_tmp/wordpress
+
   inception_mdb_db:
+    driver: local
+    name: inception_mdb_db
+    driver_opts:
+      type: none
+      o: bind
+      device: /Users/victorducoulombier/Documents/dev/42/inception_volumes_tmp/maria_db
 
 networks:
-  default :
-    name: inception_base_network
+  inception_network:
+    driver: bridge
