--- a/srcs/.env
+++ b/srcs/.env
@@ -4,7 +4,7 @@ MYSQL_ROOT_PASSWORD=mysql_root_pass
 MYSQL_DATABASE=wordpress_db
 MYSQL_USER=wordpress
 MYSQL_PASSWORD=wordpress
-WORDPRESS_DB_HOST=inception_mdb:3306
+WORDPRESS_DB_HOST=inception_mdb
 
 # WP ACCOUNTS DEFAULTS
 
