--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,38 +1,37 @@
 version: '3'
 services:
 
-  nginx :
+  inception_nginx :
     depends_on:
-      - mariadb
-      - wordpress
+      - inception_mdb
+      - inception_wp
     build :
       context: ./requirements/Nginx
     image: nginx
     volumes:
-      - worpress:/var/www/html/
+      - inception_wp_content_vol:/var/www/html/
     networks:
       - inception_network
-    container_name : nginx
+    container_name : inception_nginx
     ports:
       - "443:443"
     env_file: .env
     restart: unless-stopped
 
-  wordpress:
+  inception_wp:
     depends_on: 
-      - mariadb
+      - inception_mdb
     build:
       context: ./requirements/WP
     image: wordpress
     volumes:
-      - wordpress:/var/www/html/
+      - inception_wp_content_vol:/var/www/html/
     networks:
       - inception_network
-    container_name: wordpress
+    container_name: inception_wp
     env_file: .env
-    restart: unless-stopped
 
-  mariadb :
+  inception_mdb :
     build: 
       context: ./requirements/MariaDB
       args: 
@@ -41,29 +40,29 @@ services:
         WPDB_PASS: $MYSQL_PASSWORD
     image: mariadb
     volumes: 
-      - mariadb:/var/lib/mysql
+      - inception_mdb_db:/var/lib/mysql
     networks:
       - inception_network
-    container_name: mariadb
+    container_name: inception_mdb
     restart: unless-stopped
 
 
 volumes:
-  wordpress:
+  inception_wp_content_vol:
     driver: local
-    name: wordpress
+    name: inception_wp_content_vol
     driver_opts:
       type: none
       o: bind
-      device: /home/vducoulo/data/wordpress
+      device: /Users/victorducoulombier/Documents/dev/42/inception_volumes_tmp/wordpress
 
-  mariadb:
+  inception_mdb_db:
     driver: local
-    name: mariadb
+    name: inception_mdb_db
     driver_opts:
       type: none
       o: bind
-      device: /home/vducoulo/data/mariadb
+      device: /Users/victorducoulombier/Documents/dev/42/inception_volumes_tmp/maria_db
 
 networks:
   inception_network:
